--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
 }
 
 .section1 {
-	height: 50vh;
+	height: 100vh;
 	background-image: url("IMG/main_background.jpg"); 
 	background-attachment: fixed;
 	background-size: cover;
@@ -73,7 +73,7 @@ body {
 }
 
 h1 {
-    color: white;
+    color: black;
     font-family: 'Petrona', serif;
     font-size: 100px;
     text-shadow: 2px 4px #ff7700;
@@ -88,10 +88,12 @@ h1 {
 }
 
 h2 {
+  padding: 100px 0;
 	text-align: center;
 	font-size: 55px;
 	font-family: 'Chakra Petch', sans-serif;
-	color: white;
+  color: black;
+  text-shadow: 2px 4px #ff7700;
 }
 
 h3 {
