--- a/style.css
+++ b/style.css
@@ -132,6 +132,12 @@ p {
   text-decoration: none;
 }
 
+.titles {
+  font-family: "Black Ops One", cursive;
+  font-size: 3rem;
+  text-shadow: 4px 4px black;
+}
+
 /* Hexagons */
 #hexGrid {
   overflow: hidden;
